--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^15.1.5",
     "@angular/platform-server": "^15.1.5",
     "@angular/router": "^15.1.5",
+    "@ngx-translate/core": "^14.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
