--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "npx tailwindcss -i ./src/index.css -o ./src/App.css --watch"
   },
   "dependencies": {
+    "bundler": "^0.8.0",
     "express": "^4.19.2",
+    "jekyll": "^3.0.0-beta1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
